# vim-config

./: .VimballRecord  .gitignore  .netrwhist  .vimrc  README.md  gvimrc
.vim/skeletons/: appkit-main.m  shell.sh
.vim/snippets/UltiSnips/: all.snippets  cmake.snippets  python.snippets  swift.snippets
.vim/vimmake-scripts/: vimmake.compile-run
config/: .gvimrc  .vimrc  InsertObjCBracket.vim  Mac.vim  ObjectiveC.vim  Swift.vim  Windows.vim
ftdetect/: tmux.vim
plugin/: tagbar-haskell.vim
skeletons/: CMakeLists.txt  appkit-main.m  basic.cpp  catch.cpp  cocoa.m  foundation-main.mm  foundation.m  main.cpp  main.py  swift-script.swift
snippets/UltiSnips/: cmake.snippets  markdown.snippets  objc.snippets  python.snippets  sh.snippets  swift.snippets
syntax/: fscript.vim
vim/: .vimrc
vim/.vim/config/: ObjectiveC.vim
vim/.vim/snippets/UltiSnips/: all.snippets  sh.snippets
vim/.vim/syntax/: cisco.vim
vim/.vim/vimmake-scripts/: vimmake.compile-run
vimmake-scripts/: vimmake.compile  vimmake.compile-run
